<resources>
    <string name="app_name">Interim</string>
    <string name="cancel">Annuler</string>

    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="RememberMe">Remember Me</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Logo">Logo</string>
    <string name="FirstName">FirstName</string>
    <string name="LastName">LastName</string>
    <string name="Email">Email</string>
    <string name="ConfirmEmailAddress">Confirm Email Address</string>
    <string name="SignUp">Sign Up</string>
    <string name="registrationPage">Inscription</string>
    <string name="_10_km">10 Km</string>
    <string name="_20_km">20 Km</string>
    <string name="_30_km">30 Km</string>
    <string name="_40_km">40 Km</string>
    <string name="_50_km">50 Km</string>
    <string name="schedule_label">Schedule</string>
    <string name="candidacy_label">Candidacy</string>
    <string name="offers_label">Offers</string>
    <string name="notifications_label">Notifications</string>
    <string name="dashboard">Dashboard</string>
    <string name="users">Users</string>
    <string name="login">Login</string>
    <string-array name="user_types">
        <item>Chercheurdemploi</item>
        <item>Employé</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>