<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/Paradiso"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/image_view_back_arrow"
        android:layout_width="@dimen/_25pxh"
        android:layout_height="@dimen/_25pxh"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/next_arrow_left_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logInTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="InterimFinder"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:fontFamily="@font/pacifico"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/image_view_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInLayoutUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/logInTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/avatar"
            android:drawableLeft="@drawable/avatar"
            android:hint="@string/Username"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInLayoutPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="@id/txtInLayoutUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lock"
            android:drawableLeft="@drawable/lock"
            android:hint="@string/Password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RememberMe"
        app:layout_constraintTop_toBottomOf="@id/txtInLayoutPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"/>


    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:text="@string/Login"
        android:background="@drawable/btn_login"
        style="@style/ButtonLogin"
        app:layout_constraintTop_toBottomOf="@id/rememberMe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signUp"
        android:layout_marginTop="35dp"
        app:layout_constraintWidth_default="wrap"/>

    <Button
        android:id="@+id/signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/SignUp"
        android:background="@drawable/btn_signup"
        app:layout_constraintTop_toBottomOf="@id/rememberMe"
        app:layout_constraintStart_toEndOf="@id/login"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp"
        app:layout_constraintWidth_default="wrap"/>
</androidx.constraintlayout.widget.ConstraintLayout>
