<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chercheOffre"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Acceuil_Utilisateur_chercheOffres">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_constraint_layout_activity_base"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".modules.core.BaseActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_header"
            android:background="@drawable/rectangle_bg_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="14dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/logoutTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/poppinssemibold"
                android:gravity="center"
                android:text="Déconnexion"
                android:textColor="@color/Paradiso"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:fontFamily="@font/pacifico"
                android:gravity="center"
                android:text="InterimFinder"
                android:textColor="@color/Paradiso"
                android:textSize="45dp"

                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/img_btn_profile"
                android:layout_width="@dimen/_35pxh"
                android:layout_height="@dimen/_35pxh"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                android:layout_marginEnd="4dp"
                android:src="@drawable/profil_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"
                tools:ignore="ContentDescription"
                tools:src="@drawable/profil_icon" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_login"
                style="@style/AppButtonIndigoRounded"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:ellipsize="end"
                android:gravity="center"
                android:letterSpacing="0.05"
                android:lineSpacingExtra="@dimen/_9pxh"
                android:singleLine="true"
                android:text="@string/login"
                android:textAllCaps="false"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_search"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/search_icon"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/microphone_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="10dp"
                android:hint="Search"
                app:boxCornerRadiusTopStart="@dimen/_25pxh"
                app:boxCornerRadiusBottomEnd="@dimen/_25pxh"
                app:boxCornerRadiusBottomStart="@dimen/_25pxh"
                app:boxCornerRadiusTopEnd="@dimen/_25pxh"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_job_offer_list_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:id="@+id/img_btn_filter"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_field_search"
                app:layout_constraintBottom_toBottomOf="@id/text_field_search"
                app:layout_constraintStart_toEndOf="@id/text_field_search"
                app:icon="@drawable/filter_search_icon" />

            <HorizontalScrollView
                android:id="@+id/horizontal_scroll_view_chip_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@id/img_btn_filter"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group_distance_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="true"
                    app:singleLine="true"
                    >



                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_10km"
                        android:layout_width="70dp"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/_10_km"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_20km"
                        android:layout_width="70dp"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/_20_km"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_30km"
                        android:layout_width="70dp"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/_30_km"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_40km"
                        android:layout_width="70dp"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/_40_km"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_50km"
                        android:layout_width="70dp"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/_50_km"/>

                </com.google.android.material.chip.ChipGroup>


            </HorizontalScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/base_activity_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_header"
            app:layout_constraintBottom_toTopOf="@id/bottom_navigation" />

        <TextView
            android:id="@+id/suggestions_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Suggestions de recherche"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_header"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" />
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/material_card_0"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:cardElevation="5dp"
            style="?attr/materialCardViewElevatedStyle"
            app:cardCornerRadius="10dp"
            app:rippleColor="@color/gray_app"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:focusable="true"
            android:checkable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/suggestions_text">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_0"
                android:padding="9dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F0F0F2">

                <ImageView
                    android:id="@+id/map"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/gps"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/favoris_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins"
                    android:text="Basée sur votre localisation
                       Toutes les offres autour de vous "
                    android:textColor="#C0C0C1"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/map"
                    app:layout_constraintTop_toTopOf="@id/map"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/offersRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/material_card_0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"/>




        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/bottom_navigation_menu" >


        </com.google.android.material.bottomnavigation.BottomNavigationView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation_manager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/bottom_navigation_menu_gestionnaire" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            app:backgroundTint="@color/indigo_main"
            app:layout_anchorGravity="end|bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@android:drawable/ic_input_add"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>